--- a/src/scss/pages/_case-overview.scss
+++ b/src/scss/pages/_case-overview.scss
@@ -1,6 +1,6 @@
-.case-overview {
-  min-height: 420px
-}
+// .case-overview {
+//   min-height: 420px
+// }
 
 .case-overview-nav {
 	background: $grey;
